--- a/test-output/old/Page Object test example/methods.html
+++ b/test-output/old/Page Object test example/methods.html
@@ -1,46 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:42:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>16/05/06 15:42:55</td>   <td>13439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">verifyIamNewHereTestCase</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>16/05/06 15:42:58</td>   <td>16365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">verifyAllReadyMembersElements</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>16/05/06 15:42:58</td>   <td>16416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">clickOnLoginWithInvalidUsernameAndPassword</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>16/05/06 15:43:09</td>   <td>26885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">clickOnNeedHelpWithyourUsernamePassLink</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>16/05/06 15:43:13</td>   <td>31107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">clickOnLoginWithValidCredentials</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:43:36</td>   <td>54422</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:43:37</td>   <td>54789</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>16/05/06 15:43:53</td>   <td>70564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuOptions()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyMailMenuOptions</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>16/05/06 15:44:40</td>   <td>118097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuSentItems()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyMailMenuSentItems</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>16/05/06 15:45:13</td>   <td>151219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuComposeMessage()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyMailMenuComposeMessage</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>16/05/06 15:45:58</td>   <td>196146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfile()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">CheckwithViewProfile</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>16/05/06 15:46:27</td>   <td>225314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfileAndGettheSlots()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">CheckwithViewProfileAndGettheSlots</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>16/05/06 15:46:56</td>   <td>253534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyScheduleMenu()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyScheduleMenu</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:47:27</td>   <td>285356</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:47:28</td>   <td>285707</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.ComposeMessageTest@43a25848]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>16/05/06 15:47:40</td>   <td>297826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ComposeMessageTest.LoginAndClickonComposeMessage()[pri:0, instance:com.pp.tests.ComposeMessageTest@43a25848]">LoginAndClickonComposeMessage</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:48:09</td>   <td>326926</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.ComposeMessageTest@43a25848]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:48:09</td>   <td>327220</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@30c7da1e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="ceb1a5">  <td>16/05/06 15:48:22</td>   <td>339830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GenericAppointmentRequestTest.LoginAndRequestForAppointment()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@30c7da1e]">LoginAndRequestForAppointment</td> 
-  <td>main@1874154700</td>   <td></td> </tr>
-<tr bgcolor="6a99b2">  <td>16/05/06 15:49:06</td>   <td>384240</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@30c7da1e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="d384ee">  <td>16/05/16 13:16:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/16 13:16:37</td>   <td>9834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">verifyIamNewHereTestCase</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/16 13:16:41</td>   <td>13581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">verifyAllReadyMembersElements</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/16 13:16:41</td>   <td>13643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">clickOnLoginWithInvalidUsernameAndPassword</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/16 13:16:49</td>   <td>21883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">clickOnNeedHelpWithyourUsernamePassLink</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/16 13:16:52</td>   <td>25514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">clickOnLoginWithValidCredentials</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="d384ee">  <td>16/05/16 13:17:14</td>   <td>47183</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@5b464ce8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="d384ee">  <td>16/05/16 13:17:15</td>   <td>47567</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/16 13:17:23</td>   <td>56039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuOptions()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">verifyMailMenuOptions</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/16 13:18:05</td>   <td>98450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuSentItems()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">verifyMailMenuSentItems</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/16 13:18:44</td>   <td>137469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuComposeMessage()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">verifyMailMenuComposeMessage</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/16 13:19:32</td>   <td>184830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfile()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">CheckwithViewProfile</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/16 13:19:52</td>   <td>204877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfileAndGettheSlots()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">CheckwithViewProfileAndGettheSlots</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/16 13:20:19</td>   <td>232251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyScheduleMenu()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">verifyScheduleMenu</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="d384ee">  <td>16/05/16 13:20:54</td>   <td>266568</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.AccountSummaryTest@30c7da1e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="d384ee">  <td>16/05/16 13:20:54</td>   <td>266925</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.ComposeMessageTest@2133c8f8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>16/05/16 13:21:18</td>   <td>290779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ComposeMessageTest.LoginAndClickonComposeMessage()[pri:0, instance:com.pp.tests.ComposeMessageTest@2133c8f8]">LoginAndClickonComposeMessage</td> 
+  <td>main@66233253</td>   <td></td> </tr>
+<tr bgcolor="d384ee">  <td>16/05/16 13:21:58</td>   <td>330650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.ComposeMessageTest@2133c8f8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@66233253</td>   <td></td> </tr>
 </table>
